templates/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-api
  namespace: mtls
  labels:
    app: product-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: quay.io/cloudfirst/product-service:latest
          volumeMounts:
          - mountPath: "/tls"
            name: tls
          - name: config
            mountPath: /deployments/config
      volumes:
        - name: tls
          secret:
            secretName: client-example-com-tls
        - name: config
          configMap:
            name: product
            defaultMode: 420
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: mtls
spec:
  selector:
    app: product-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
