templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-api
  namespace: mtls
  labels:
    app: rating-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-api
  template:
    metadata:
      labels:
        app: rating-api
    spec:
      containers:
        - name: rating-api
          image: quay.io/cloudfirst/rating-service:latest
          volumeMounts:
          - mountPath: "/tls"
            name: tls
          - name: config
            mountPath: /deployments/config
      volumes:
        - name: tls
          secret:
            secretName: server-example-com-tls
        - name: config
          configMap:
            name: rating
            defaultMode: 420
---
apiVersion: v1
kind: Service
metadata:
  name: rating
  namespace: mtls
spec:
  selector:
    app: rating-api
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
